gatekeeper/constraints/3-block-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: block-root-user
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "argocd", "gatekeeper-system", "monitoring"]
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
