gatekeeper/constraints/4-block-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: block-host-network
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "argocd", "gatekeeper-system", "monitoring"]
  parameters:
    hostNetwork: false
